--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,8 @@ header {
   justify-content: space-between;
   align-items: center;
   background-color: white;
-  height: 5rem;
-  margin: 0 5%;
+  height: 10vw;
+  margin: 0 10%;
 }
 /*Left side of the header*/
 .logo {
@@ -13,29 +13,36 @@ header {
 }
 
 .logo img {
-  width: 30%;
-  height: 30%;
+  width: 5vw;
+  height: 4.5vw;
 }
 
 .logo p {
-  font-size: 1.2rem;
+  font-size: 5vw;
 }
 
 /*Right side of the header*/
 nav ul {
-  margin-bottom: 1rem;
+  margin-bottom: 2vw;
+}
+
+@media (min-width: 768px) {
+  nav ul {
+    margin-bottom: 0;
+  }
 }
 
 nav li {
   display: inline;
-  font-size: 0.7rem;
-  margin: 0.3rem;
+  font-size: 2.5vw;
+  margin: 1vw;
 }
 nav a {
   text-decoration: none;
   color: #7c7c7c;
   &:hover {
-    padding-bottom: 0.5rem;
-    border-bottom: solid #5094f2 0.1rem;
+    color: black;
+    padding-bottom: 1vw;
+    border-bottom: solid #5094f2 0.5vw;
   }
 }
