--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ nav a {
 .shopping-cart {
   display: flex;
   justify-content: space-around;
-
+  margin: 0 2vw 0 2vw;
   border-bottom: solid #dfdfdf 0.01vw;
 }
 .cart {
