--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ header {
 
   margin: 1% 10%;
 }
+
+@media (max-width: 768px) {
+  header {
+    margin: 1% 2%;
+  }
+}
 /*Left side of the header*/
 .logo {
   display: flex;
@@ -37,7 +43,7 @@ nav li {
 
 @media (max-width: 768px) {
   nav li {
-    font-size: 3vw;
+    font-size: 4vw;
   }
 }
 nav a {
